--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,7 @@ span.MuiLinearProgress-root {
 
 .date-picker > div > div {
   height: 30px;
+  margin-bottom: 5px;
 }
 
 .date-picker > div > div > input {
